# check-director

./: README.md  pyproject.toml
check/: check.py  test_check.py
inputs/: builtins.txt  d3.menus  the.txt
