[tool.poetry]
name = "director-missing"
version = "0.1.0"
description = "Checks which Director parts aren't implemented yet."
authors = ["Roland van Laar <roland@rolandvanlaar.nl>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
mypy = "^0.761"
ipython = "^7.11.1"
black = "^19.10b0"
ptvsd = "^4.3.2"
ipdb = "^0.12.3"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
